--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-image: url("Images/background.jpg");
+  background-image: url("./assets/images/background.jpg");
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
