--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -32,6 +32,7 @@ img {
 .container {
   margin-top: 110px;
   background-color: rgba(105,115,99,0.7);
+  width: fit-content;
   color:white;
 }
 .container button {
