--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -13,6 +13,19 @@
 .navbar a {
   color: white;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: #D9A679;
+  background-color: #1C2621;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  border-top: dashed 3px white;  
+  padding-top: 5px;
+}
+
 body {
   background-image: url("./assets/images/background.jpg");
   background-color: #cccccc;
